etcdkeeper.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: etcdkeeper
  name: etcdkeeper
spec:
  containers:
  - image: evildecay/etcdkeeper
    imagePullPolicy: Always
    name: etcdkeeper
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    securityContext:
      capabilities:
        drop:
        - MKNOD
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    seLinuxOptions:
      level: s0:c26,c20
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
---
apiVersion: v1
kind: Service
metadata:
  name: etcdkeeper
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: etcdkeeper
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etcdkeeper
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: etcdkeeper
    weight: 100
  wildcardPolicy: None
