route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etcdkeeper
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: etcdkeeper
    weight: 100
  wildcardPolicy: None
